crates/wgso/tests/cases_invalid/directive_parsing/.expected
error: file should start with `#mod` or `#shader` directive
 --> ./tests/cases_invalid/directive_parsing/invalid_header.wgsl:4:1
  |
4 | var a: u32; // not ok
  | ^
  |
error: expected `compute` or `render`
 --> ./tests/cases_invalid/directive_parsing/main.wgsl:1:9
  |
1 | #shader<invalid> test
  |         ^
  |
error: unexpected tokens
 --> ./tests/cases_invalid/directive_parsing/main.wgsl:2:23
  |
2 | #shader<compute> test invalid
  |                       ^^^^^^^
  |